# sovpool

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/sovpool_assess/: Cargo.toml
crates/sovpool_assess/src/: lib.rs
crates/sovpool_assess/src/protocols/: ark.rs  cashu.rs  ctv_pool.rs  l1.rs  lightning.rs  mod.rs
crates/sovpool_assess/tests/: comparison.rs
crates/sovpool_cli/: Cargo.toml
crates/sovpool_cli/src/: assess.rs  main.rs  pool.rs
crates/sovpool_core/: Cargo.toml
crates/sovpool_core/src/: cooperative.rs  covenant.rs  error.rs  exit.rs  fees.rs  lib.rs  pool.rs  timeout.rs  tx.rs
crates/sovpool_core/tests/: proptest_pool.rs
crates/sovpool_rpc/: Cargo.toml
crates/sovpool_rpc/src/: lib.rs  node.rs
crates/sovpool_test/: Cargo.toml
crates/sovpool_test/src/: harness.rs  inquisition.rs  lib.rs
crates/sovpool_test/tests/: regtest.rs
crates/sovpool_wallet/: Cargo.toml
crates/sovpool_wallet/src/: lib.rs  psbt.rs  tracker.rs
docs/: architecture.md  ctv-primer.md  getting-started.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ctv_hash.rs
scripts/: signet-demo.sh
