[package]
name = "sovpool-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
sovpool_core = { path = "../crates/sovpool_core" }
bitcoin = { version = "0.32", features = ["serde", "rand-std"] }

[[bin]]
name = "ctv_hash"
path = "fuzz_targets/ctv_hash.rs"
doc = false
