[package]
name = "sovpool_core"
description = "Core CTV payment pool primitives for Bitcoin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["bitcoin", "ctv", "covenant", "payment-pool"]
categories = ["cryptography::cryptocurrencies"]
readme = "../../README.md"

[dependencies]
bitcoin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
